--- a/index.html
+++ b/index.html
@@ -44,14 +44,86 @@
           <h1 class="card-title">Featured Shows</h5>
         </div>
       </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">April 2020</th>
+          </tr>
+      </table>
     <div id="play-info">
         <!-- Think of span like a horizontal div -->
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">April 2020</th>
-              </tr>
-          </table>
+        <img src="images/a-raisin-in-the-sun-theater-1.png" class="img-thumbnail" alt="Theater Is Fun">
+        <div id = "title">
+            <h3>A Raisin In The Sun</h3>
+        </div>
+        <div id = "dates">
+            <p>April 6, 2020 - March 12, 2021</p>
+        </div>
+        <br>
+        <div id = "location">
+            <p>Griot Theater, 233 State St, Chicago, IL</p>
+        </div>
+        <br>
+        <div id = "price">
+            <p>$75</p>
+        </div>
+        <span>
+            <button type="button" class="btn btn-warning">Read More</button>
+        </span>
+        <br>
+    </div>
+    <hr>
+    <br>
+    <div id="play-info">
+        <!-- Think of span like a horizontal div -->
+        <img src="images/a-raisin-in-the-sun-theater-1.png" class="img-thumbnail" alt="Theater Is Fun">
+        <div id = "title">
+            <h3>A Raisin In The Sun</h3>
+        </div>
+        <div id = "dates">
+            <p>April 6, 2020 - March 12, 2021</p>
+        </div>
+        <br>
+        <div id = "location">
+            <p>Griot Theater, 233 State St, Chicago, IL</p>
+        </div>
+        <br>
+        <div id = "price">
+            <p>$75</p>
+        </div>
+        <span>
+            <button type="button" class="btn btn-warning">Read More</button>
+        </span>
+        <br>
+    </div>
+    <hr>
+    <br>
+    <div id="play-info">
+        <!-- Think of span like a horizontal div -->
+        <img src="images/a-raisin-in-the-sun-theater-1.png" class="img-thumbnail" alt="Theater Is Fun">
+        <div id = "title">
+            <h3>A Raisin In The Sun</h3>
+        </div>
+        <div id = "dates">
+            <p>April 6, 2020 - March 12, 2021</p>
+        </div>
+        <br>
+        <div id = "location">
+            <p>Griot Theater, 233 State St, Chicago, IL</p>
+        </div>
+        <br>
+        <div id = "price">
+            <p>$75</p>
+        </div>
+        <span>
+            <button type="button" class="btn btn-warning">Read More</button>
+        </span>
+        <br>
+    </div>
+    <hr>
+    <br>
+    <div id="play-info">
+        <!-- Think of span like a horizontal div -->
         <img src="images/a-raisin-in-the-sun-theater-1.png" class="img-thumbnail" alt="Theater Is Fun">
         <div id = "title">
             <h3>A Raisin In The Sun</h3>
